fix tabs overflow

--- a/engage/www/trainings/problems/code.css
+++ b/engage/www/trainings/problems/code.css
@@ -30,6 +30,7 @@
 .tabs-list {
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 
 .tab-item {
@@ -42,7 +43,7 @@
     text-align: center;
     background-color: var(--tab-bg-color);
     color: var(--tab-color);
-    border: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
 }
 
 .tab-item.active {
